grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: sample-acc
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: shared-volume
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: grafana-dashboard-provisioning
              mountPath: /etc/grafana/provisioning/dashboards/dashboard-provisioning.yaml
              subPath: dashboard-provisioning.yaml
            - name: grafana-volume
              mountPath: /var/lib/grafana
              
        - name: grafana-dashboard-sidecar
          image: kiwigrid/k8s-sidecar:latest
          volumeMounts:
            - name: shared-volume
              mountPath: /etc/grafana/provisioning/dashboards
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-datasources
          configMap:
            name: grafana-datasources-cm
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-dashboard-provisioning
          configMap:
            name: grafana-dashboard-provisioning
        - name: shared-volume
          emptyDir: {}
