grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-service
  namespace: grafana
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.mw.local`)
    priority: 10
    services:
    - name: grafana-service
      port: 80
  tls:
    secretName: grafana-tls-secret
